Fix silly navbar shift

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,9 @@
 /* Theme: https://github.com/catppuccin/catppuccin */
 
 html {
+    /* make scrollbar overlay over the content, not taking up any space */
+    overflow-y: overlay;
+
     /*
         min-width: 100vh is not actually the entire screen on mobile because yes. fill-available works but is not really standard
 
@@ -9,7 +12,6 @@ html {
         this works anywhere but in firefox. That's okay i guess, considering it's just a minor visual bug
         https://caniuse.com/mdn-css_properties_min-height_stretch
     */
-
     height: -webkit-fill-available;
     height: stretch;
     height: fill-available;
